--- a/sitorapp/parti/parti.css
+++ b/sitorapp/parti/parti.css
@@ -2,6 +2,8 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    background-color: rgb(142, 193, 225);
+    margin-top: 5px;
 }
 
 #pag{
@@ -9,4 +11,5 @@
     text-align: center;
     align-items: center;
     height: 100vh;
+
 }
