--- a/sitorapp/rapporto.css
+++ b/sitorapp/rapporto.css
@@ -1,12 +1,16 @@
 *{
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
+    background-color: rgb(142, 193, 225);
 }
 
 #box a{
     display: block;
     margin: 25px;
+}
+#box h1{
+    margin-top: 20px;
 }
 
 #box{
