--- a/sitorapp/parti/parti.css
+++ b/sitorapp/parti/parti.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     background-color: rgb(142, 193, 225);
     margin-top: 5px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #pag{
